--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
     "@clover-network/clover-connector": "^1.0.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@gnosis.pm/safe-apps-web3-react": "^1.3.0",
     "@myetherwallet/mewconnect-connector": "^0.1.8",
     "@venly/web3-provider": "^0.32.0",
@@ -22,6 +25,7 @@
     "@web3-react/walletconnect-connector": "^6.2.13",
     "@web3-react/walletlink-connector": "^6.2.14",
     "ethers": "^5.6.5",
+    "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
