--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@gnosis.pm/safe-apps-web3-react": "^1.3.0",
+    "@metaplex/js": "^4.12.0",
     "@myetherwallet/mewconnect-connector": "^0.1.8",
+    "@solana/wallet-adapter-base": "^0.9.5",
+    "@solana/wallet-adapter-phantom": "^0.9.3",
+    "@solana/wallet-adapter-react": "^0.15.5",
+    "@solana/wallet-adapter-react-ui": "^0.9.7",
+    "@solana/wallet-adapter-wallets": "^0.16.1",
     "@venly/web3-provider": "^0.32.0",
     "@web3-react/authereum-connector": "^6.2.0",
     "@web3-react/core": "^6.1.9",
